@@ -94,7 +94,7 @@ then
     run-parts /usr/share/zentyal-custom/scripts
 fi
 
-apt-get purge -y netplan.io
+apt-get remove -y netplan.io
 
 sync
 
